# dictionary-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  test.json
examples/: example-tei.xml  example.json  example.rdf
src/: config.rs  main.rs  model.rs  ontolex.rs  rest.rs  sqlite.rs  state.rs  tei.rs
src/html/: index.html
src/rdf/: mod.rs  model.rs  turtle.pest  turtle.rs
