[package]
name = "elexis-dictionary-service"
version = "0.1.0"
authors = ["John P. McCrae <john@mccr.ae>"]
edition = "2018"

[dependencies]
gotham = "0.5.0"
gotham_derive = "*"
http = "*"
hyper = "*"
mime = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
clap = "*"
xml-rs = "0.8.3"
pest = "1.0.6"
pest_derive = "1.0.6"
rand = "*"
quick-error = "1.2.3"
rusqlite = "*"
